--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,5 @@
-<p>home-page works!</p>
+<div class="container">
+  <div class="mt-3" *ngFor="let bug of bugs">
+    <app-bug [bug]="bug" (onDelete)="onBugDelete($event)"></app-bug>
+  </div>
+</div>
