Fixed minor edit bug

--- a/src/app/bug/bug.component.html
+++ b/src/app/bug/bug.component.html
@@ -5,7 +5,7 @@
     <div class="card-header d-flex align-items-center">
       <h3>{{ bug.title }}</h3>
       <div class="ms-auto">
-        {{ bug.created }}
+        {{ bug.readableDate }}
       </div>
       <button
         class="ms-2 btn btn-primary"
